effects/slideback: Also check activity when matching windows

When a window is raised, we compare which windows we have to move.

Otherwise it gets managed, but never painted, and thus never cleared,
this corrupts the stacking order.

BUG: 455429